# apache-pyspark-by-example

./: .pre-commit-config.yaml  Built_in_Functions.ipynb  Download_Data.ipynb  Joins.ipynb  README.md  Schemas.ipynb  Working_with_Columns.ipynb  Working_with_Dates.ipynb  Working_with_RDDs.ipynb  Working_with_Rows.ipynb  pyproject.toml
01.GoogleColab - Lab Setup and Download Data/: Lab_environment.ipynb
02.Working with DataFrame API/: 00.Using Google Colab - schemas.ipynb  01.Working With Data Frame API.ipynb
03.Functions/: 01.Functions.ipynb
04.Resillient Distributed Datasets (RDD)/: RDDs.ipynb
